--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/about.png" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/gihubusers.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>More examples</h2>
-									<p>Fully functioning web pages Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod exercitationem laudantium laboriosam a corporis quas distinctio laborum. Placeat nesciunt, quaerat animi et impedit deleniti sapiente molestiae nam, quisquam harum amet.</p>
+									<h2>GitHub User Search/h2>
+									<p>This is a simple site that allows you to search for any Github user. You can also see all of their information as well as their followers.</p>
 									<ul class="actions">
-										<li><a href="https://github.com/JoelGonzalez02" class="button">See more</a></li>
+										<li><a href="https://react-github-user-card-five-wine.now.sh" class="button">See more</a></li>
 									</ul>
 								</div>
 							</div>
