--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Joel Gonzalez Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -72,10 +72,10 @@
 							<a href="#" class="image"><img src="images/gihubusers.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>GitHub User Search/h2>
+									<h2>GitHub User Search</h2>
 									<p>This is a simple site that allows you to search for any Github user. You can also see all of their information as well as their followers.</p>
 									<ul class="actions">
-										<li><a href="https://react-github-user-card-five-wine.now.sh" class="button">See more</a></li>
+										<li><a href="https://react-github-user-card-five-wine.now.sh" class="button">See this project</a></li>
 									</ul>
 								</div>
 							</div>
